--- a/Necesario Plantilla/informe.tex
+++ b/Necesario Plantilla/informe.tex
@@ -41,9 +41,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                         DATOS (Conectados a RMarkdown)                       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Título del Trabajo Final}
-\author{Primer participante \\ Segundo participante \\ Tercer
-participante}
+\title{Análisis Descriptivo de Distitos Tipos de Cultivos en la India
+Durante el Periodo 1997-2019}
+\author{Aymara Andersen \\ Asly Caputo}
 
 % Lógica para Facultad: Si la defines en el YAML la usa, si no, usa la default
 
@@ -53,7 +53,7 @@ Estadistica y Ciencias Actuariales}
 
 \degree{Computación I}
 \director{Jesus Ochoa \\ Oliver Triveño}
-\degreedate{Febrero 2026} 
+\degreedate{Marzo 2026} 
 \lugar{Caracas}
 
 \portadatrue 
@@ -110,7 +110,7 @@ investigación\ldots{}             % Aquí se pega el texto que escribiste en el
 \def\baselinestretch{1.5}
 
 % --- CAMBIO CRÍTICO 2: Aquí RMarkdown inyecta todo tu texto ---
-\chapter*{Introducción}
+\textbackslash chapter*\{Introducción\}
 
 Introducción del trabajo de investigación
 
@@ -137,7 +137,6 @@ Justificación del trabajo de investigación\\
 \begin{itemize}
   \item{Describir objetivo general del trabajo de investigación}
 \end{itemize}
-
 \subsection{Objetivos Específicos}
 \begin{itemize}
   \item{Describir objetivo 1 del trabajo de investigación}
